# RayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  config.txt
include/: stb_image.h
include/RayTracer/: BVH.h  Camera.h  Ray.h  RayTracer.h  Skybox.h  Texture.h  Triangle.h
lib/: assimp-vc142-mt.lib
src/: BVH.cpp  Camera.cpp  ImageIO.cpp  RayTracer.cpp  Skybox.cpp  Texture.cpp  Triangle.cpp  main.cpp
